// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`sidebar shell snapshots > renders the collapsed rail after the crossfade settles, in place 1`] = `
<div
  data-slot="sidebar"
  style="display: contents;"
>
  <div
    class="root fading quietBars"
    style="width: 300px;"
  >
    <div
      class="activityBar"
    >
      <button
        aria-label="Open sidebar"
        class="brandButton"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="brandFish"
          data-content="965fe321"
          fill="none"
          height="17.6580310880829"
          viewBox="0 0 23.16 17.04"
          width="24"
        />
      </button>
      <div
        class="activityIcons"
      >
        <button
          aria-current="true"
          aria-label="Workspaces"
          class="activityIcon activityIconActive"
          type="button"
        >
          <svg
            data-content="c0ce4dcc"
            fill="none"
            height="18"
            viewBox="0 0 16 16"
            width="18"
            xmlns="http://www.w3.org/2000/svg"
          />
        </button>
      </div>
      <div
        class="activitySpacer"
      />
      <button
        aria-label="Open sidebar"
        class="activityIcon"
        type="button"
      >
        <svg
          data-content="35f95b0c"
          fill="none"
          height="18"
          viewBox="0 0 16 16"
          width="18"
          xmlns="http://www.w3.org/2000/svg"
        />
      </button>
    </div>
    <div
      class="panel"
    >
      <div
        class="panelHeader"
      >
        <span
          class="panelTitle"
        >
          Workspaces
        </span>
      </div>
      <button
        aria-label="New session"
        class="newSession"
        type="button"
      >
        <svg
          data-content="c0ce4dcc"
          fill="none"
          height="14"
          viewBox="0 0 16 16"
          width="14"
          xmlns="http://www.w3.org/2000/svg"
        />
        <span
          class="newSessionLabel"
        >
          New Session
        </span>
      </button>
      <div
        class="regionArea"
      >
        <div
          data-slot="sidebar.workspaces"
          style="display: contents;"
        />
      </div>
      <div
        class="footArea"
      >
        <div
          class="footerActions"
        >
          <div
            data-slot="sidebar.footer.action"
            style="display: contents;"
          />
        </div>
        <div
          class="settingsArea"
        >
          <div
            data-slot="sidebar.settings"
            style="display: contents;"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`sidebar shell snapshots > renders the expanded column (wordmark, capsule, empty holes) 1`] = `
<div
  data-slot="sidebar"
  style="display: contents;"
>
  <div
    class="root quietBars"
    style="width: 300px;"
  >
    <div
      class="activityBar"
    >
      <button
        aria-label="Collapse sidebar"
        class="brandButton"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="brandFish"
          data-content="965fe321"
          fill="none"
          height="17.6580310880829"
          viewBox="0 0 23.16 17.04"
          width="24"
        />
      </button>
      <div
        class="activityIcons"
      >
        <button
          aria-current="true"
          aria-label="Workspaces"
          class="activityIcon activityIconActive"
          type="button"
        >
          <svg
            data-content="c0ce4dcc"
            fill="none"
            height="18"
            viewBox="0 0 16 16"
            width="18"
            xmlns="http://www.w3.org/2000/svg"
          />
        </button>
      </div>
      <div
        class="activitySpacer"
      />
      <button
        aria-label="Collapse sidebar"
        class="activityIcon"
        type="button"
      >
        <svg
          data-content="35f95b0c"
          fill="none"
          height="18"
          viewBox="0 0 16 16"
          width="18"
          xmlns="http://www.w3.org/2000/svg"
        />
      </button>
    </div>
    <div
      class="panel"
    >
      <div
        class="panelHeader"
      >
        <span
          class="panelTitle"
        >
          Workspaces
        </span>
      </div>
      <button
        aria-label="New session"
        class="newSession"
        type="button"
      >
        <svg
          data-content="c0ce4dcc"
          fill="none"
          height="14"
          viewBox="0 0 16 16"
          width="14"
          xmlns="http://www.w3.org/2000/svg"
        />
        <span
          class="newSessionLabel"
        >
          New Session
        </span>
      </button>
      <div
        class="regionArea"
      >
        <div
          data-slot="sidebar.workspaces"
          style="display: contents;"
        />
      </div>
      <div
        class="footArea"
      >
        <div
          class="footerActions"
        >
          <div
            data-slot="sidebar.footer.action"
            style="display: contents;"
          />
        </div>
        <div
          class="settingsArea"
        >
          <div
            data-slot="sidebar.settings"
            style="display: contents;"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`sidebar shell snapshots > renders the expanded column in the default locale (zh, no setLocale) 1`] = `
<div
  data-slot="sidebar"
  style="display: contents;"
>
  <div
    class="root quietBars"
    style="width: 300px;"
  >
    <div
      class="activityBar"
    >
      <button
        aria-label="收起侧边栏"
        class="brandButton"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="brandFish"
          data-content="965fe321"
          fill="none"
          height="17.6580310880829"
          viewBox="0 0 23.16 17.04"
          width="24"
        />
      </button>
      <div
        class="activityIcons"
      >
        <button
          aria-current="true"
          aria-label="工作区"
          class="activityIcon activityIconActive"
          type="button"
        >
          <svg
            data-content="c0ce4dcc"
            fill="none"
            height="18"
            viewBox="0 0 16 16"
            width="18"
            xmlns="http://www.w3.org/2000/svg"
          />
        </button>
      </div>
      <div
        class="activitySpacer"
      />
      <button
        aria-label="收起侧边栏"
        class="activityIcon"
        type="button"
      >
        <svg
          data-content="35f95b0c"
          fill="none"
          height="18"
          viewBox="0 0 16 16"
          width="18"
          xmlns="http://www.w3.org/2000/svg"
        />
      </button>
    </div>
    <div
      class="panel"
    >
      <div
        class="panelHeader"
      >
        <span
          class="panelTitle"
        >
          工作区
        </span>
      </div>
      <button
        aria-label="新建会话"
        class="newSession"
        type="button"
      >
        <svg
          data-content="c0ce4dcc"
          fill="none"
          height="14"
          viewBox="0 0 16 16"
          width="14"
          xmlns="http://www.w3.org/2000/svg"
        />
        <span
          class="newSessionLabel"
        >
          新会话
        </span>
      </button>
      <div
        class="regionArea"
      >
        <div
          data-slot="sidebar.workspaces"
          style="display: contents;"
        />
      </div>
      <div
        class="footArea"
      >
        <div
          class="footerActions"
        >
          <div
            data-slot="sidebar.footer.action"
            style="display: contents;"
          />
        </div>
        <div
          class="settingsArea"
        >
          <div
            data-slot="sidebar.settings"
            style="display: contents;"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;
